# windows-gpu-overlay

./: Cargo.toml  LICENSE
examples/: a.rs  waves.rs
src/: canvas.rs  hooks.rs  lib.rs  screen_capture.rs
src/shaders/: image.wgsl  triangle.wgsl
