[package]
name = "real_gpu_app"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "30.0.0"
pollster = "0.4.0"

# במקום windows-sys, נשתמש ב-windows הרשמי אבל בצורה רזה ומדוייקת:
windows = { version = "0.62.2", features = [
        "Win32_Foundation",
        "Win32_System_LibraryLoader",
        "Win32_UI_WindowsAndMessaging",
        "Win32_Graphics_DirectComposition",
        "Win32_Graphics_Dxgi",
        "Win32_Graphics_Direct3D11",
        "Win32_Graphics_Dxgi",
]}
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_Console"] }
bytemuck = "1.25.0"
delaunator = "1.1.0"
image = "0.25.10"
glyphon = "0.12.0"